# Anybackup

./: NOTICE  README.md  README_zh.md
Agent/service/conversation/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
Agent/service/conversation/app/: __init__.py
Agent/service/conversation/app/application/: __init__.py
Agent/service/conversation/app/application/commands/: __init__.py  agent_events.py  config.py  conversation.py  reasoning.py
Agent/service/conversation/app/application/models/: conversation.py  outbox.py  writeback.py
Agent/service/conversation/app/application/ports/: __init__.py  error_catalog.py  id_generator.py  locking.py  message_catalog.py  messaging.py  repositories.py  unit_of_work.py
Agent/service/conversation/app/application/use_cases/: __init__.py  access.py  agent_status.py  config.py  context.py  conversation.py  decision_agent_ag_ui.py  outbox.py  (+3 more)
Agent/service/conversation/app/bootstrap/: app_factory.py  container.py  settings.py
Agent/service/conversation/app/domain/: __init__.py  conversation.py  message.py
Agent/service/conversation/app/infrastructure/: __init__.py
Agent/service/conversation/app/interfaces/: __init__.py
Agent/service/conversation/migrations/: env.py
Agent/service/conversation/migrations/versions/: 20260421_0001_initial_conversation_tables.py  20260422_0002_writeback_context_reasoning_tables.py  20260422_0003_stream_fragment_table.py  20260422_0004_context_snapshot_table.py  20260422_0005_candidate_selection_table.py  20260422_0006_drop_stream_writeback_state.py  20260423_0007_turn_tracking_fields.py  20260424_0008_string_reasoning_trace_ids.py  20260426_0009_allow_ag_ui_output_updates.py
Agent/service/conversation/tests/contract/: test_architecture_boundaries.py  test_http_contract_paths.py  test_http_contract_schemas.py  test_openapi_baseline.py  test_openapi_contract_diff.py  test_skill_manifest.py
Agent/service/conversation/tests/e2e/: test_conversation_agent_loop.py
Agent/service/conversation/tools/conversation_agent_mq_mock/: Dockerfile  README.md  pyproject.toml  requirements.txt
Agent/service/core_agent/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  start_core_agent_service.bat
Agent/service/core_agent/src/core_agent_service/: __main__.py  bootstrap.py  cli.py  main.py
Agent/service/core_agent/tests/: conftest.py
Agent/service/core_agent/tests/unit/: test_bootstrap.py  test_cli.py  test_contract_models.py  test_db_session.py  test_docs_contract.py  test_kweaver_sdk.py  test_logging.py  test_mq_runtime.py  test_relay_service.py  test_repositories.py
deploy/deploy_package/agent-content/deploy-orchestrator/: pyproject.toml
deploy/deploy_package/agent-content/deploy-orchestrator/deploy_orchestrator/: __init__.py  cli_runner.py  config_loader.py  context.py  discovery.py  logger.py  main.py  planner.py  renderer.py  schema.py  state_store.py
(+911 files in other folders)
