[project]
name = "conversation-service"
version = "0.1.0"
description = "Conversation Service backend"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.0",
    "dependency-injector>=4.48.0",
    "structlog>=25.0.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "redis>=7.0.0",
    "aio-pika>=9.5.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.17.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "types-PyYAML>=6.0.0",
    "testcontainers[postgres]>=4.13.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
