[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-agent-service"
version = "0.1.0"
description = "Minimal RabbitMQ-driven core agent service."
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.10",
  "pydantic-settings>=2.8",
  "kweaver-sdk>=0.6.10",
  "pika>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
