[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conversation-agent-mq-mock"
version = "0.1.0"
description = "MQ mock for Conversation Service frontend integration"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aio-pika>=9.5.0",
]

[project.scripts]
conversation-agent-mq-mock = "conversation_agent_mq_mock.main:main"

[tool.setuptools.packages.find]
where = ["src"]

